--- a/index.html
+++ b/index.html
@@ -16,23 +16,28 @@
 
     <!-- MENU -->
     <header id="header">
-        <nav class= "header-nav" >
+        <nav class="header-nav">
             <ul class="menu menu-principal"> <!-- lista não ordenada -->
                 <li class="menu-item">
                     <a href="#home">
-                        <span class=" menu-texto"> Home </span>
+                        <span class="menu-texto">Home</span>
                     </a>
-                    
                 </li>
                 <li class="menu-item">
                     <a href="#projetos">
-                        <span class=" menu-texto"> projetos </span>
-                        <li class="menu-item">
-                            <a href="#sobre">
-                                <span class=" menu-texto"> sobre </span>
-                                <li class="menu-item">
-                                    <a href="#contato">
-                                        <span class=" menu-texto"> contato </span>
+                        <span class="menu-texto">Projetos</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="#sobre">
+                        <span class="menu-texto">Sobre</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="#contato">
+                        <span class="menu-texto">Contato</span>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- logo -->
@@ -47,7 +52,38 @@
             <i id="toggltheme" class="bi bi-sun"></i>
         </div>
     </header>
-    <!-- FIM MENU -->
+    <!-- FIM MENU DESKTOP -->
+
+    <!-- Menu Mobile  -->
+    <nav class="nav-mobile">
+        <ul class="menu-mobile">
+            <li class="menu-item">
+                <a href="#home" class="menu-link active">
+                    <i class="menu-icone bi bi-house-door"></i>
+                    <span class="menu-texto">Home</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#projetos" class="menu-link">
+                    <i class="bi bi-folder"></i>
+                    <span class="menu-texto">Projetos</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#sobre" class="menu-link">
+                    <i class="bi bi-person"></i>
+                    <span class="menu-texto">Sobre</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#contato" class="menu-link">
+                    <i class="bi bi-envelope"></i>
+                    <span class="menu-texto">Contato</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <!-- FIM MENU MOBILE -->
 
 </body>
 
