--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -104,7 +104,8 @@
     <main id="home">
         <div class="main-content">
 
-            <h1> <B> Soluções Digitais & Desenvolvimento Front-End.</B>
+            <h1>
+                <B> Soluções Digitais & Desenvolvimento Front-End.</B>
             
             <p>
                 Edson de Melo, SP, Analista de  Sistema
@@ -112,6 +113,7 @@
             </p>
             
             </h1> <!-- Slogan -->
+            <h2>A cada página, Uma nova história.</h2>
 
             <!-- Redes Sociais -->
              <ul class="menu menu-social">
@@ -152,6 +154,8 @@
 
         </div>
     </main>
+
+    <script src="js/script.js"> </script>
 
 </body>
 
