--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edson de Melo | Portfólio</title>
+    <title> Edson de Melo | Portfólio</title>
 
     <link rel="stylesheet" href="css/style.css">
 
     <!-- BootStrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -21,7 +25,7 @@
             <ul class="menu menu-principal"> <!-- lista nao ordenada -->
                 <li class="menu-item">
                     <a href="#home" class="menu-link active">
-                        <span class="menu-texto"> home </span>
+                        <span class="menu-texto"> Home </span>
                     </a>
                 </li>
                 <li class="menu-item">
@@ -45,16 +49,18 @@
         <!-- logo -->
         <div class="header-logo">
             <a href="#home">
-
-                <img src="img/image-removebg-preview (1).png" alt="" class="logo">
-                <i class=""> </i>
+                <img src="img/pixelcut-export__29_-removebg-preview.png" alt="" class="logo">
             </a>
         </div>
 
         <!-- trocar cor tema -->
         <div class="header-toggle">
             <i id="toggleTheme" class="bi bi-sun"></i>
+            <!-- aria-label="Alternar tema" -->
+            <!-- Isso ajuda usuários com leitores de tela a entenderem a funcionalidade do botão. -->
         </div>
+
+
 
     </header>
     <!-- FIM MENU DESKTOP -->
@@ -104,73 +110,64 @@
     <main id="home">
         <div class="main-content">
 
-            <h1>
-                <B> Soluções Digitais & </B>
+            <h1> <b> Soluções Digitais & </b>
                 Desenvolvimento Front-End.
 
-
-
-            </h1> <!-- Slogan -->
-            <p>
-                <b> Edson de Melo</b>, SP, Analista de Sistema
-
-            </p>
-
-            <b class="frase">
-                Inovando a cada clique.
-            </b>
-
+                <p>
+                    <b>Edson de Melo</b> - SP, Desenvolvedor e Instrutor Front-End.
+                </p>
+            </h1> <!-- slogan -->
 
             <!-- Redes Sociais -->
             <ul class="menu menu-social">
+
                 <li>
                     <a href="https://github.com/ed10sm" class="" target="_blank">
-                        <i class="bi bi-github"> </i>
-                    </a>
-
-                <li>
-
-                    <a href="https://instagram.com/ed10sm" class="" target="_blank">
-                        <i class="bi bi-instagram"> </i>
-                    </a>
-
-                <li>
-
-                    <a href="https://tiktok.com/ed10sm" class="" target="_blank">
-                        <i class="bi bi-tiktok"> </i>
-
+                        <i class="menu-icone bi bi-github"> </i>
                     </a>
                 </li>
 
-                <a href="https://br.linkedin.com/in/edsonsm" class="" target="_blank">
-                    <i class="bi bi-linkedin"> </i>
+                <li>
+                    <a href="https://www.instagram.com/ed10sm/" class="" target="_blank">
+                        <!-- <i class='menu-icone bx bxl-instagram-alt'></i> -->
+                        <i class="menu-icone bi bi-instagram"> </i>
+                    </a>
+                </li>
 
-                </a>
+                <li>
+                    <a href="https://www.linkedin.com/in/edsonsm/" class="" target="_blank">
+                        <!-- <i class='menu-icone bx bxl-instagram-alt'></i> -->
+                        <i class="menu-icone bi bi-linkedin"> </i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#facebook" class="" target="_blank">
+                        <!-- <i class='menu-icone bx bxl-instagram-alt'></i> -->
+                        <i class="menu-icone bi bi-facebook"> </i>
+                    </a>
                 </li>
             </ul>
 
-
-            <!-- Botão externo -->
+            <!-- botao externo -->
             <a href="#projetos">
                 <button class="btn btn-primary">
                     <span> Ver Projetos </span>
                     <i class="bi bi-arrow-down-right"> </i>
-
                 </button>
-
             </a>
-
-
 
         </div> <!-- main-content -->
 
         <div class="video">
 
-            <iframe src="https://www.youtube.com/embed/cpraXaw7dyc" title="Optimus - Gen 2 | Tesla" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/5nEyjYn9_LI?list=PL590L5WQmH8dsxxz7ooJAgmijwOz0lh2H"
+                title="HACKING GOOGLE: Series Trailer (:30)" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         </div>
+
     </main>
 
     <section id="projetos" class="projetos">
@@ -179,34 +176,373 @@
         <div class="projeto-container">
 
             <div class="projeto-card">
-                <img src="img projetos/Gemini_Generated_Image_fi6wmifi6wmifi6w.jfif" alt="" class="card-img">
 
-                 <h3></h3>
-                <p class="card-discription"> Gestão de Mídias Sociais
+                <img src="img/projetos/games-store.jpg" alt="" class="card-img">
 
+                <div class="card-body">
+
+                    <h3 class="card-title"> Games Store </h3>
+                    <p class="card-description"> Venda de Games Digitais </p>
+
+                    <ul class="card-lista">
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Jogos Ps5
+                        </li>
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Jogos PC
+                        </li>
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Jogos Nintendo
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div> <!-- fim card 1 -->
+
+
+            <div class="projeto-card card-reverse">
+
+                <img src="img/projetos/josisbox.jpg" alt="" class="card-img">
+
+                <div class="card-body">
+
+                    <h3 class="card-title"> Josi's Box </h3>
+                    <p class="card-description"> Venda de Livros </p>
+
+                    <ul class="card-lista">
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Literatura
+                        </li>
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            História
+                        </li>
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Tecnologia
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div> <!-- fim card 2 -->
+
+            <div class="projeto-card">
+
+                <img src="img/projetos/portfolio.PNG" alt="" class="card-img">
+
+                <div class="card-body">
+
+                    <h3 class="card-title"> Feriani </h3>
+                    <p class="card-description"> Portfolio Digital </p>
+
+                    <ul class="card-lista">
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Projetos
+                        </li>
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Tecnologias
+                        </li>
+                        <li class="card-item">
+                            <i class="icone-seta bi bi-chevron-double-right"></i>
+                            Clientes
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div> <!-- fim card 3 -->
+
+        </div>
+
+        <!-- Fim Projetos -->
+
+        <h2>Galeria</h2>
+
+        <div class="carousel">
+
+            <input type="radio" name="carousel" id="slide1" checked>
+            <input type="radio" name="carousel" id="slide2">
+            <input type="radio" name="carousel" id="slide3">
+
+            <div class="slides">
+                <div class="slide"><img src="img/slide1.PNG" alt="Imagem 1"></div>
+                <div class="slide"><img src="img/slide2.PNG" alt="Imagem 2"></div>
+                <div class="slide"><img src="img/slide3.PNG" alt="Imagem 3"></div>
+            </div>
+
+            <div class="navigation">
+                <label for="slide1"></label>
+                <label for="slide2"></label>
+                <label for="slide3"></label>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <section id="sobre" class="sobre">
+
+        <div class="sobre-content1">
+
+            <img src="img/avatar.jpg" class="sobre-perfil" alt="">
+
+            <div class="sobre-descricao">
+
+                <h2>Sobre Mim</h2>
+                <p>
+                    Edson de Melo. Entusiasta por tecnologia, Games e PC, meu primeiro "Hello World" foi na
+                    pré-adolescência quanto tive contato com HTML em Tabelas e aqueles websites esquisitos feitos em
+                    Flash 😅. Atualmente curso especiliazação em IA e Machine Learning e atuo como instrutor no Senai
+                    SP.
                 </p>
 
-                <ul class="card-lista">
-                    <li class="card-item">
-                        <i></i>
-                        Instagram</li>
-                    <li class="card-item">Facebook</li>
-                    <li class="card-item">Tik Tok</li>
+                <div class="sobre-skills">
 
+                    <i class="bi bi-translate"></i>
+                    <span> Inglês: Intermediário </span>
 
-                </ul>
+                </div>
+
+                <div class="descricao-button">
+
+                    <a href="https://www.linkedin.com/in/gustavo-feriani/" target="_blank">
+
+                        <button class="btn btn-primary">
+
+                            <span> Conecte-se Comigo </span>
+                            <i class="bi bi-arrow-up-right"> </i>
+
+                        </button>
+                    </a>
+                </div>
+
             </div>
 
         </div>
+        <!-- Fim Content 1 -->
+
+        <div class="sobre-content2">
+
+            <div class="col1">
+
+                <div class="row1">
+
+                    <h3>Formação</h3>
+
+                    <h4> IA e Machine Learning </h4><!-- Curso -->
+                    <span>Fev 2024 - 2025</span>
+
+                    <div class="sobre-icones">
+                        <i class="bi bi-bank"></i>
+                        <span>Cruzeiro do Sul</span>
+                    </div>
+
+                    <div class="sobre-icones">
+                        <i class="bi bi-mortarboard"></i>
+                        <span>Pós Gradução</span>
+                    </div>
+                    <!-- nova formação -->
+
+                    <h4> Sistemas para Internet </h4><!-- Curso -->
+                    <span>2020 - 2022</span>
+
+                    <div class="sobre-icones">
+                        <i class="bi bi-bank"></i>
+                        <span>FAM</span>
+                    </div>
+
+                    <div class="sobre-icones">
+                        <i class="bi bi-patch-check"></i>
+                        <span>Técnologo</span>
+                    </div>
+
+                    <!-- nova formação -->
+                    <h4> Multimidia </h4><!-- Curso -->
+                    <span>2012-2014</span>
+
+                    <div class="sobre-icones">
+                        <i class="bi bi-bank"></i>
+                        <span>Senac</span>
+                    </div>
+
+                    <div class="sobre-icones">
+                        <i class="bi bi-award"></i>
+                        <span>Técnico</span>
+                    </div>
+
+                </div> <!-- fim Row 1 -->
+
+
+                <div class="row2">
+
+                    <h3>Experiências</h3>
+
+                    <h4>Instrutor</h4>
+                    <span> Senai. Fev 2012 - Atualmente</span>
+                    <span>Instrutor de Treinamentos e Cursos.</span>
+
+                    <ul class="sobre-lista">
+                        <li class="sobre-item"> Aulas Presenciais </li>
+                        <li class="sobre-item"> Aulas EAD </li>
+                    </ul>
+
+                </div>
+
+            </div> <!-- Fim Coluna 1 -->
+
+            <div class="col2">
+
+                <h3>Cursos</h3>
+
+                <div class="accordion">
+
+                    <div class="accordion-item active">
+
+                        <button class="accordion-header start">
+                            <span> Desenvolvimento Front Angular </span>
+                            <i class="bi bi-caret-down-fill"> </i>
+                        </button>
+
+                        <div class="accordion-body">
+                            <p>Dio. 68 Horas</p>
+                            <p>Desenvolvimento Front End com Angular e desenvolver habilidades práticas para construir
+                                aplicações web modernas e responsivas, enquanto treina recursos de Inteligência
+                                Artificial para se tornar um desenvolvedor completo.</p>
+                        </div>
+
+                    </div> <!-- Fim Curso 1 -->
+
+                    <!-- Curso 2 -->
+                    <div class="accordion-item">
+
+                        <button class="accordion-header">
+                            <span>Google Cloud Engineer</span>
+                            <i class="bi bi-caret-down-fill"> </i>
+                        </button>
+
+                        <div class="accordion-body">
+                            <p>Senai. 40 Horas</p>
+                            <p>Com a certificação Associate Cloud Engineer, é possível implantar aplicativos, monitorar
+                                operações e gerenciar soluções corporativas. Também é possível usar o Console do Google
+                                Cloud e a interface de linha de comando na realização de tarefas comuns baseadas na
+                                plataforma para a manutenção de uma ou mais soluções implantadas que usam os serviços
+                                gerenciados pelo Google ou autogerenciados no Google Cloud.</p>
+                        </div>
+
+
+                    </div> <!-- Fim Curso 2 -->
+
+
+                    <!-- Curso 3 -->
+                    <div class="accordion-item">
+
+                        <button class="accordion-header end">
+                            <span>Google Cloud Computing Foundations</span>
+                            <i class="bi bi-caret-down-fill"> </i>
+                        </button>
+
+                        <div class="accordion-body end">
+                            <p>Senai. 40 Horas</p>
+                            <p>Este curso fornece uma visão geral da computação em nuvem, maneiras de usar o Google
+                                Cloud e diferentes opções de computação.</p>
+                        </div>
+
+                    </div> <!-- Fim Curso 3 -->
+
+                </div> <!-- Fim Accordion -->
+
+            </div>
+
+        </div>
+
     </section>
 
-    <section id="sobre" class="sobre">
-        <h2>Sobre</h2>
+
+    <section id="contato" class="contato">
+        <h2>Contato</h2>
+
+        <p>
+            Estou disponível para orientações e novas conexões.
+            Contate-me via e-mail e conecte-se comigo através das minhas redes sociais.
+        </p>
+
+        <ul class="menu menu-social">
+            <li>
+                <a href="#" class="menu-link" target="_blank">
+                    <i class="menu-icone bi bi-github"> </i>
+                    <span>GitHub</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="#" class="menu-link" target="_blank">
+                    <i class="menu-icone bi bi-linkedin"></i>
+                    <span>Linkedin</span>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="menu-link" target="_blank">
+                    <i class="menu-icone bi bi-instagram"></i>
+                    <span>Instagram</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://wa.me/+55119" class="menu-link" target="_blank">
+                    <i class="menu-icone bi bi-whatsapp"></i>
+                    <span>WhatsApp</span>
+                </a>
+            </li>
+
+        </ul>
+
+        <a href="mailto:gustavo.feriani@sp.senai.br">
+            <button class="btn btn-primary">
+                <i class="menu-icone bi bi-envelope-fill"></i>
+                <span class="email">edsonmeloficial@gmail.com</span>
+            </button>
+        </a>
+
+
+        <p>Entre em contato preenchendo o formulário abaixo.</p>
+
+        <form action="https://formspree.io/f/SEU_FORM_ID" method="POST" class="form-contato">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" name="mensagem" placeholder="Digite sua mensagem" required></textarea>
+
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+
+
     </section>
 
-    <section id="Contato" class="Contato">
-        <h2>Sobre</h2>
-    </section>
+
+    <footer>
+        <p>
+            &copy; 2025. Portfolio desenvolvido para fins Educativos com base nas aulas no
+            <a href="https://sp.senai.br/unidade/leopoldina/" target="_blank">
+
+                Senai Leopoldina - SP</a>.
+            Desenvolvido por <a href="https://github.com/guuhferiani" target="_blank">
+                <i class="bi bi-github"></i>
+                Edson de Melo </a>
+        </p>
+    </footer>
+
 
     <script src="js/script.js"> </script>
 
