--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
             <input type="radio" name="carousel" id="slide3">
 
             <div class="slides">
-                <div class="slide"><img src="img/slide1.PNG" alt="Imagem 1"></div>
-                <div class="slide"><img src="img/slide2.PNG" alt="Imagem 2"></div>
-                <div class="slide"><img src="img/slide3.PNG" alt="Imagem 3"></div>
+                <div class="slide"><img src="img/sistema-de-gestao-1.webp" alt="Imagem 1"></div>
+                <div class="slide"><img src="img/Sistemas-de-gestao.jpg" alt="Imagem 2"></div>
+                <div class="slide"><img src="img/smart tecnology1.jpg" alt="Imagem 3"></div>
             </div>
 
             <div class="navigation">
