--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="css/style.css">
 
+     <!-- Favicon -->
+  <link rel="icon" href="img/favicon_io/favicon.ico">
+
     <!-- BootStrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -114,7 +117,7 @@
                 Desenvolvimento Front-End.
 
                 <p>
-                    <b>Edson de Melo</b> - SP, Desenvolvedor e Instrutor Front-End.
+                    <b>Edson de Melo</b> - SP, Analista de Sistemas e Desenvolvedor Front-End.
                 </p>
             </h1> <!-- slogan -->
 
@@ -314,7 +317,7 @@
 
                 <div class="descricao-button">
 
-                    <a href="https://www.linkedin.com/in/gustavo-feriani/" target="_blank">
+                    <a href="https://www.linkedin.com/in/edsonsm/" target="_blank">
 
                         <button class="btn btn-primary">
 
@@ -490,7 +493,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="menu-link" target="_blank">
+                <a href="https://www.instagram.com/ed10sm/" class="menu-link" target="_blank">
                     <i class="menu-icone bi bi-instagram"></i>
                     <span>Instagram</span>
                 </a>
@@ -504,7 +507,7 @@
 
         </ul>
 
-        <a href="mailto:gustavo.feriani@sp.senai.br">
+        <a href="mailto:edsonmeloficial@gmail.com">
             <button class="btn btn-primary">
                 <i class="menu-icone bi bi-envelope-fill"></i>
                 <span class="email">edsonmeloficial@gmail.com</span>
@@ -514,7 +517,7 @@
 
         <p>Entre em contato preenchendo o formulário abaixo.</p>
 
-        <form action="https://formspree.io/f/SEU_FORM_ID" method="POST" class="form-contato">
+        <form action="https://formspree.io/f/mwplokke" method="POST" class="form-contato">
             <label for="nome">Nome</label>
             <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
 
@@ -537,7 +540,7 @@
             <a href="https://sp.senai.br/unidade/leopoldina/" target="_blank">
 
                 Senai Leopoldina - SP</a>.
-            Desenvolvido por <a href="https://github.com/guuhferiani" target="_blank">
+            Desenvolvido por <a href="https://github.com/ed10sm" target="_blank">
                 <i class="bi bi-github"></i>
                 Edson de Melo </a>
         </p>
